# newsletter

./: .env  Cargo.toml  Dockerfile  configuration.yaml
.github/workflows/: rust.yml
.sqlx/: query-46668488e82e1d15781b9b6cb1a3ff9df11db24d8c189c5702676be4315e35c4.json  query-9ae4cd3de5579643622bb2c2ea60695817e2835c9ca3c2fc1d0971b8206cd832.json
configuration/: base.yaml
migrations/: 20250211062520_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: mod.rs  new_subscriber.rs  subscriber_email.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
